--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-# Python-generated files
-__pycache__/
+*.egg-info
+*.idea
 *.py[oc]
+*.venv
+.idea
+__pycache__/
 build/
 dist/
 wheels/
-*.egg-info
-
-*.venv
