--- a/character_service/docker-compose.yml
+++ b/character_service/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   character_db:
-    image: postgres:latest
+    image: postgres:14
     container_name: dnd_tracker_character_db
     environment:
       POSTGRES_USER: ${CHARACTER_POSTGRES_USER}
@@ -19,10 +19,6 @@ services:
       interval: 5s
       timeout: 5s
       retries: 10
-    deploy:
-      resources:
-        limits:
-          memory: 2G
 
   character_service:
     build: .
