--- a/user_service/docker-compose.yml
+++ b/user_service/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   user_db:
-    image: postgres:latest
+    image: postgres:14
     container_name: dnd_tracker_user_db
     environment:
       POSTGRES_USER: ${USER_POSTGRES_USER}
@@ -19,10 +19,6 @@ services:
       interval: 5s
       timeout: 5s
       retries: 10
-    deploy:
-      resources:
-        limits:
-          memory: 2G
 
   user_service:
     build: .
