--- a/user_service/.env.example
+++ b/user_service/.env.example
@@ -1,6 +1,8 @@
 USER_POSTGRES_USER=user_service
 USER_POSTGRES_PASSWORD=secure_password
 USER_POSTGRES_DB=user_service_db
+USER_POSTGRES_HOST=localhost
+USER_POSTGRES_PORT=35432
 
 JWT_SECRET_KEY=bebrabebrabebra
 ACCESS_TOKEN_EXPIRE_MINUTES=4320
