--- a/dice_service/pyproject.toml
+++ b/dice_service/pyproject.toml
@@ -1,7 +1,12 @@
-[project]
+[tool.poetry]
 name = "dice-service"
 version = "0.1.0"
-description = "Add your description here"
-readme = "README.md"
-requires-python = ">=3.12"
-dependencies = []
+description = ""
+authors = ["d.zaklyakov"]
+
+[tool.poetry.dependencies]
+python = ">=3.12,<4.0"
+
+[build-system]
+requires = ["poetry-core>=2.0.0,<3.0.0"]
+build-backend = "poetry.core.masonry.api"
