--- a/user_service/pyproject.toml
+++ b/user_service/pyproject.toml
@@ -21,6 +21,7 @@ python-dotenv = ">=1.2.1,<2.0.0"
 python-jose = ">=3.5.0,<4.0.0"
 sqlalchemy = ">=2.0.44,<3.0.0"
 uvicorn = ">=0.38.0,<0.39.0"
+numpy = "^2.3.4"
 
 
 [build-system]
