--- a/campaign_service/pyproject.toml
+++ b/campaign_service/pyproject.toml
@@ -7,6 +7,10 @@ authors = ["d.zaklyakov"]
 [tool.poetry.dependencies]
 python = ">=3.12,<4.0"
 
+[tool.poetry.group.dev.dependencies]
+black = "^25.11.0"
+ruff = "^0.14.4"
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
