--- a/character_service/docker-compose.yml
+++ b/character_service/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   character_db:
-    image: postgres:latest
+    image: postgres:14
     container_name: dnd_tracker_character_db
     environment:
       POSTGRES_USER: ${CHARACTER_POSTGRES_USER}
@@ -9,7 +9,7 @@ services:
     env_file:
       - .env
     ports:
-      - "35433:5432"
+      - "45433:5432"
     volumes:
       - dnd_tracker_character_db:/var/lib/postgresql
     command: [ "postgres", "-c", "log_statement=all" ]
@@ -19,10 +19,6 @@ services:
       interval: 5s
       timeout: 5s
       retries: 10
-    deploy:
-      resources:
-        limits:
-          memory: 2G
 
   character_service:
     build: .
