--- a/campaign_service/pyproject.toml
+++ b/campaign_service/pyproject.toml
@@ -1,7 +1,16 @@
-[project]
+[tool.poetry]
 name = "campaign-service"
 version = "0.1.0"
-description = "Add your description here"
-readme = "README.md"
-requires-python = ">=3.12"
-dependencies = []
+description = ""
+authors = ["d.zaklyakov"]
+
+[tool.poetry.dependencies]
+python = ">=3.12,<4.0"
+
+[tool.poetry.group.dev.dependencies]
+black = "^25.11.0"
+ruff = "^0.14.4"
+
+[build-system]
+requires = ["poetry-core>=2.0.0,<3.0.0"]
+build-backend = "poetry.core.masonry.api"
