--- a/character_service/pyproject.toml
+++ b/character_service/pyproject.toml
@@ -1,7 +1,33 @@
-[project]
+[tool.poetry]
 name = "character-service"
 version = "0.1.0"
-description = "Add your description here"
-readme = "README.md"
-requires-python = ">=3.12"
-dependencies = []
+description = ""
+authors = ["d.zaklyakov"]
+
+[tool.poetry.dependencies]
+python = ">=3.12,<4.0"
+
+[tool.poetry.group.dev.dependencies]
+black = "^25.11.0"
+ruff = "^0.14.4"
+
+[build-system]
+requires = ["poetry-core>=2.0.0,<3.0.0"]
+build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 88
+target-version = ["py312"]
+
+[tool.ruff]
+line-length = 88
+target-version = "py312"
+fix = true
+lint.select = ["E", "F", "I", "B"]
+lint.ignore = [
+    "E501",  # black conflict
+    "B008"  # Do not perform function call `Depends` in argument defaults 
+]
+exclude = ["alembic", "migrations", "__pycache__"]
+
+
