Tests added to user service

--- a/user_service/pyproject.toml
+++ b/user_service/pyproject.toml
@@ -22,6 +22,10 @@ python-jose = ">=3.5.0,<4.0.0"
 sqlalchemy = ">=2.0.44,<3.0.0"
 uvicorn = ">=0.38.0,<0.39.0"
 numpy = "^2.3.4"
+pytest = "^9.0.1"
+faker = "^38.0.0"
+httpx = "^0.28.1"
+pytest-mock = "^3.15.1"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -47,4 +51,7 @@ lint.ignore = [
 ]
 exclude = ["alembic", "migrations", "__pycache__"]
 
+
+[tool.pytest.ini_options]
+anyio_backend = "asyncio"
 
