--- a/dice_service/pyproject.toml
+++ b/dice_service/pyproject.toml
@@ -3,6 +3,7 @@ name = "dice-service"
 version = "0.1.0"
 description = ""
 authors = ["m.ramazanova"]
+package-mode = false
 
 [tool.poetry.dependencies]
 python = ">=3.12,<4.0"
